--- a/apps/home/index.html
+++ b/apps/home/index.html
@@ -12,7 +12,7 @@
 
 <body>
   Home
-  <img src="@/resources/DOTA.png" />
+  <img src="@resources/DOTA.png" />
   <script src="./dist/main.js"></script>
 </body>
 
